tests/compose_backend_fail/missing_default.stderr
error: compose_backend! requires a `default => <field>` route
  --> tests/compose_backend_fail/missing_default.rs:19:16
   |
19 |     pub struct Broken {
   |                ^^^^^^
